Add DEFAULT_LANGUAGE selection to .env and zod validation for it's validity

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 NODE_ENV="development"|"production"
+DEFAULT_LANGUAGE="en"
 DATABASE_URL="mysql://user:password@localhost:3306/myDatabase"
 ASSETS_PATH="assets/"
 HOST="localhost"
