--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@fastify/multipart": "^7.6.0",
     "@fastify/session": "^10.2.1",
     "@fastify/static": "^6.10.1",
-    "@prisma/client": "^4.12.0",
+    "@prisma/client": "^4.15.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "fastify": "^4.15.0",
@@ -39,6 +39,7 @@
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.40.0",
     "fastify-cli": "^5.7.1",
+    "prisma": "^4.15.0",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
